# VideoTranslate

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  extract_text.py  translator.py  utils.py  video_translator.py
app/models/: ocr.py  speech2text.py
app/translators/: base_translator.py  deepl_trans.py  huggingface.py  openai.py
tests/: test_videotranslate.py
videotranslate/: async_ln.py  config.py  extract_text.py  main.py  start_streamlit.py  translator.py  utils.py  video_download.py
videotranslate/AI_models/: speech2text_gcloud.py
videotranslate/models/: video.py
videotranslate/translators/: google_trans.py  huggingface.py
