[tool.poetry]
name = "VideoTranslate"
version = "0.1.0"
description = ""
authors = ["waltermaffy <waltermaffy@yahoo.it>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.4.4"
pytube = "^12.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
